# cds-302-project

./: LICENSE  README.md  pyproject.toml
cds_302_project/: config.py  data_handler.py  db.py  main.py
cds_302_project/data/: cds302.db  food_data.xlsx
